@@ -190,6 +190,14 @@ task contract(type: Test) {
     classpath = sourceSets.contractTest.runtimeClasspath
 }
 
+
+task fortifyScan(type: JavaExec)  {
+    main = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
+    classpath += sourceSets.test.runtimeClasspath
+    jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
+}
+
+
 project.ext {
     pacticipant = 'ia_caseApi'
     pacticipantVersion = getCheckedOutGitCommitHash()
@@ -244,6 +252,10 @@ repositories {
     mavenLocal()
     jcenter()
     mavenCentral()
+
+    maven {
+        url 'https://www.jitpack.io'
+    }
 }
 
 dependencyManagement {
@@ -348,6 +360,8 @@ dependencies {
     testCompile group: 'net.serenity-bdd', name: 'serenity-rest-assured', version: versions.serenity
     testCompile group: 'net.serenity-bdd', name: 'serenity-spring', version: versions.serenity
     testCompile "com.github.tomakehurst:wiremock-jre8:2.23.2"
+
+    testCompile 'com.github.hmcts:fortify-client:1.2.1:all'
 
     //pact contract testing
     contractTestCompile group: 'au.com.dius.pact.consumer', name: 'junit5', version: versions.pact_version
